# rust

./: .gitignore
.devcontainer/: devcontainer.json  setup.sh
Project-Five/: Cargo.toml
Project-Five/src/: client.rs  main.rs
Project-Four/: Cargo.toml
Project-Four/src/: main.rs
Project-One/: Cargo.toml
Project-One/src/: main.rs
Project-Seven/: Cargo.toml  stock_data.parquet
Project-Seven/src/: main.rs
Project-Six/: Cargo.toml
Project-Six/src/: main.rs
Project-Three/: Cargo.toml
Project-Three/src/: main.rs
Project-Two/: Cargo.toml
